src/objects/BMCServiceDesk__Impact__c.object
<CustomObject>
    <description>This object allows you to store data for impact records.</description>
    <fields>
        <fullName>BMCServiceDesk__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to tag a record for exporting from RF Impact Migration package.</description>
        <inlineHelpText>Select this field to allow the record to be exported from the RF Impact Migration Pentaho package.</inlineHelpText>
        <label>Tag for Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the impact record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Impact</label>
    <listViews>
        <fullName>Active_Impacts</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Active Impacts</label>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Impact</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__ImpactId_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(Name ) , ISBLANK(Name))</errorConditionFormula>
        <errorMessage>Please enter Impact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__UniqueImpactIdCheck</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(),
NOT(ISBLANK(VLOOKUP( $ObjectType.BMCServiceDesk__Impact__c.Fields.Name , $ObjectType.BMCServiceDesk__Impact__c.Fields.Name,NULLVALUE(Name, Name)))),
IF(ISCHANGED(Name),
IF((LOWER(Name) = LOWER(VLOOKUP($ObjectType.BMCServiceDesk__Impact__c.Fields.Name , $ObjectType.BMCServiceDesk__Impact__c.Fields.Name,Name))&amp;&amp;LOWER(PRIORVALUE(Name)) != Lower(Name)), TRUE, FALSE),
FALSE))</errorConditionFormula>
        <errorMessage>An record with this Impact already exists. Enter unique Impact.</errorMessage>
    </validationRules>
</CustomObject>